--- a/train_dl.ipynb
+++ b/train_dl.ipynb
@@ -1037,7 +1037,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "id": "748a2e64",
    "metadata": {},
    "outputs": [
@@ -1064,8 +1064,16 @@
     "    return mixed_x, y_a, y_b, lam\n",
     "\n",
     "def mixup_criterion(criterion, pred, y_a, y_b, lam):\n",
-    "    return lam * criterion(pred, y_a) + (1 - lam) * criterion(pred, y_b)\n",
-    "\n",
+    "    return lam * criterion(pred, y_a) + (1 - lam) * criterion(pred, y_b)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e3bdd6d9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# ── Training function with improvements ───────────────────────────────\n",
     "def train_model(model, train_loader, test_loader, name, epochs=EPOCHS,\n",
     "                lr=1e-3, patience=25, use_mixup=True):\n",
@@ -1151,8 +1159,16 @@
     "        model.load_state_dict(best_state)\n",
     "    print(f\"  ✓ Best val accuracy: {best_val_acc:.4f}\")\n",
     "\n",
-    "    return model, history\n",
-    "\n",
+    "    return model, history"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "91b10bc1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# ── Plotting helper ───────────────────────────────────────────────────\n",
     "def plot_training_history(history, name):\n",
     "    fig, axes = plt.subplots(1, 2, figsize=(12, 4))\n",
@@ -1376,7 +1392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "id": "34473525",
    "metadata": {},
    "outputs": [
@@ -1533,7 +1549,16 @@
     "        fold_acc = accuracy_score(y_val_fold, preds)\n",
     "        cv_results[name].append(fold_acc)\n",
     "        print(f\"  {name} fold {fold+1} accuracy: {fold_acc:.4f}\")\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3138dce9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "print(f\"\\n{'='*60}\")\n",
     "print(\"Cross-Validation Results Summary:\")\n",
     "print(f\"{'='*60}\")\n",
