--- a/train_dl.ipynb
+++ b/train_dl.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 48,
    "id": "67c81a12",
    "metadata": {},
    "outputs": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 49,
    "id": "41c9ad9b",
    "metadata": {},
    "outputs": [
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 50,
    "id": "98c50fcc",
    "metadata": {},
    "outputs": [
@@ -342,7 +342,7 @@
        "[5 rows x 81 columns]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 51,
    "id": "c9f24015",
    "metadata": {},
    "outputs": [
@@ -760,7 +760,7 @@
        "[8 rows x 79 columns]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -783,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 52,
    "id": "42bc85ca",
    "metadata": {},
    "outputs": [
@@ -815,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 53,
    "id": "cbbaf881",
    "metadata": {},
    "outputs": [
@@ -848,7 +848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 54,
    "id": "f2ac03c3",
    "metadata": {},
    "outputs": [
@@ -926,20 +926,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "id": "2689e3d6",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  DNN: 7,860 parameters\n",
-      "  CNN_1D: 8,804 parameters\n",
-      "  LSTM: 36,260 parameters\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "input_dim = X_train.shape[1]\n",
     "\n",
@@ -967,7 +957,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 56,
    "id": "d011e70b",
    "metadata": {},
    "outputs": [],
@@ -1003,10 +993,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "id": "bff59dc5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  DNN: 7,860 parameters\n",
+      "  CNN_1D: 8,804 parameters\n",
+      "  LSTM: 36,260 parameters\n"
+     ]
+    }
+   ],
    "source": [
     "# ── LSTM Model (Lighter) ──────────────────────────────────────────────\n",
     "class LSTMModel(nn.Module):\n",
@@ -1037,18 +1037,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "id": "748a2e64",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Training helpers defined (with Mixup, Label Smoothing, AdamW, CosineAnnealing).\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# ── Mixup data augmentation (on-the-fly) ──────────────────────────────\n",
     "def mixup_data(x, y, alpha=0.2):\n",
@@ -1069,7 +1061,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "id": "e3bdd6d9",
    "metadata": {},
    "outputs": [],
@@ -1164,10 +1156,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "id": "91b10bc1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training helpers defined (with Mixup, Label Smoothing, AdamW, CosineAnnealing).\n"
+     ]
+    }
+   ],
    "source": [
     "# ── Plotting helper ───────────────────────────────────────────────────\n",
     "def plot_training_history(history, name):\n",
@@ -1201,7 +1201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 61,
    "id": "e760c82d",
    "metadata": {},
    "outputs": [
@@ -1227,7 +1227,13 @@
       "\n",
       "Total parameters: 7,860\n",
       "\n",
-      "Training DNN...\n",
+      "Training DNN...\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "  Epoch  25/300 — loss: 1.0497 acc: 0.5339 — val_loss: 1.3991 val_acc: 0.2917 lr: 0.000096\n",
       "  Early stopping at epoch 27 (best val_acc: 0.3750)\n",
       "  ✓ Best val accuracy: 0.3750\n"
@@ -1265,7 +1271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 62,
    "id": "df99f744",
    "metadata": {},
    "outputs": [
@@ -1333,7 +1339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 63,
    "id": "72e4dacd",
    "metadata": {},
    "outputs": [
@@ -1491,14 +1497,7 @@
       "  Epoch  25/200 — loss: 1.3664 acc: 0.2917 — val_loss: 1.4304 val_acc: 0.1250 lr: 0.000096\n",
       "  Early stopping at epoch 35 (best val_acc: 0.3333)\n",
       "  ✓ Best val accuracy: 0.3333\n",
-      "  LSTM fold 5 accuracy: 0.3333\n",
-      "\n",
-      "============================================================\n",
-      "Cross-Validation Results Summary:\n",
-      "============================================================\n",
-      "  DNN        → 0.4000 ± 0.0565  (folds: ['0.417', '0.458', '0.417', '0.417', '0.292'])\n",
-      "  CNN_1D     → 0.4417 ± 0.0858  (folds: ['0.458', '0.292', '0.417', '0.500', '0.542'])\n",
-      "  LSTM       → 0.3750 ± 0.0589  (folds: ['0.375', '0.292', '0.458', '0.417', '0.333'])\n"
+      "  LSTM fold 5 accuracy: 0.3333\n"
      ]
     }
    ],
@@ -1548,16 +1547,29 @@
     "            preds = model(val_t).argmax(1).cpu().numpy()\n",
     "        fold_acc = accuracy_score(y_val_fold, preds)\n",
     "        cv_results[name].append(fold_acc)\n",
-    "        print(f\"  {name} fold {fold+1} accuracy: {fold_acc:.4f}\")\n",
-    "\n"
+    "        print(f\"  {name} fold {fold+1} accuracy: {fold_acc:.4f}\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "id": "3138dce9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "============================================================\n",
+      "Cross-Validation Results Summary:\n",
+      "============================================================\n",
+      "  DNN        → 0.4000 ± 0.0565  (folds: ['0.417', '0.458', '0.417', '0.417', '0.292'])\n",
+      "  CNN_1D     → 0.4417 ± 0.0858  (folds: ['0.458', '0.292', '0.417', '0.500', '0.542'])\n",
+      "  LSTM       → 0.3750 ± 0.0589  (folds: ['0.375', '0.292', '0.458', '0.417', '0.333'])\n"
+     ]
+    }
+   ],
    "source": [
     "print(f\"\\n{'='*60}\")\n",
     "print(\"Cross-Validation Results Summary:\")\n",
@@ -1579,7 +1591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 66,
    "id": "8df99632",
    "metadata": {},
    "outputs": [
@@ -1753,7 +1765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 67,
    "id": "56440e85",
    "metadata": {},
    "outputs": [
@@ -1810,7 +1822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 68,
    "id": "7e34fc85",
    "metadata": {},
    "outputs": [
